CHANGELOG

2.3.1 - 2015-09-02
  * CHORE: add a console.error() when passing unknown parameters
  * FIX: add offset/length undocumented search parameters

2.3.0 - 2015-09-02
  * FEATURE: #136, fire a 'search' event once a search is sent to Algolia
  * FEATURE: ability to set multiple OR and AND filters with the numeric
  filter API
  * FEATURE: Ability to set the raw numeric filter string
  * CHORE: #125, events documentation
  * FIX(CANBREAK): semantic of addNumericRefinement indeed add an numeric, does not
  update anymore. This can possibly BREAK your code if you were relying on this. Email support@algolia.com if it does
  * FEATURE: add `requestsent` event on the helper when any request is sent
  * FEATURE: add results.getFacetStats
  * FEATURE: add `results.getFacetValues` and add sortBy option to it

2.2.0 - 2015-07-29
  * FIX: #130 toggleRefine should throw an exception when executed with an
  attribute that is not a declared facet
  * TEST: add CI testing (browsers, phantom, node, io)
  * FEATURE: add hierarchicalFacets
  * FIX: fix IE8 and IE9 compatibility
  * REFACTOR: get rid of custom `extend` method, use lodash tools
  * FIX: do not force distinct value to false on empty query
  * DOCS: provide a better readme with tips on how to use the helper
  * FIX: is$Method always return true/false instead of true/undefined
  * FIX: throw when refining an unknown facet
  * FEATURE: implement helper.getState()

2.1.2 - 2015-06-26
  * FIX: #113 support for attributes hightlightPreTag and hightlighPostTag
  * FIX: #112 distinct = undefined sent to the server
  * FIX: #110 helper.hasRefinements() now checks for numerics
  * FIX: #106 convert refinements to string
  * DOC: Update theme + fix (github.com/algolia/minami)
  * DOC: Fix misc links and descrition and added samples of objects
  * DOC: Added a cheat sheet in the generated documentation

2.1.1 - 2015-06-19
  * FIX: #107 Apply rules to distinct to prevent the API to return an error